# MENDELV

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  test_rxn.py
.codegraph/: daemon.pid
data/: draft_inputs.center_expansion.json  draft_inputs.example.json  label_schema.example.json  reaction_coverage_benchmark.json  reactions.auto_curated_promoted.json  reactions.backup.json  reactions.center_balanced.cleaned.json  reactions.center_balanced.split.json  reactions.center_cleaned.json  reactions.center_cleaned.mechanism_balanced_split.json  reactions.center_expanded.cleaned.json  reactions.center_expanded.mapping_audited.json  reactions.center_expanded.mechanism_balanced_split.json  reactions.center_expansion.promoted.json  reactions.center_validated.template_split.json  reactions.draft.center_expansion.json  reactions.example.json  reactions.minimal.json  reactions.proposed_with_auto_promoted.json
docs/: benchmark.md  center_cleanup.md  center_expansion.md  center_head.md  center_validation.md  curation.md  descriptor.md  diagnostics.md  figures.md  identifier.md  index.md  labels.md  local_force_analysis.md  mapping_center.md  md17_benchmark.md  mlip.md  mlip_comparison.md  mlip_setup.md  mlp.md  negotiator.md  open_energy_force_datasets.md  parser.md  predictor.md  qo2mol.md  reference_benchmark.md
mendel/: __init__.py  benchmark.py  center_cleanup.py  center_expansion_review.py  center_head.py  center_validation.py  constants.py  curation.py  descriptor.py  diagnostics.py  identifier.py  labels.py  local_force_analysis.py  mapping_center.py  md17.py  mlip.py  mlp.py  negotiator.py  parser.py  plotting.py  predictor.py  promotion.py  qo2mol.py  qo2mol_manager.py  reference_data.py  types.py  weighted_finetune.py
notebooks/: README.md
reports/: atom_center_benchmark_center_balanced_report.json  atom_center_benchmark_center_expanded_strict_report.json  atom_center_benchmark_cleaned_strict_report.json  atom_center_benchmark_report.json  atom_center_benchmark_template_split_report.json  atom_center_training_center_balanced_report.json  atom_center_training_center_expanded_strict_report.json  atom_center_training_cleaned_strict_report.json  atom_center_training_report.json  atom_center_training_template_split_report.json  auto_promoted_dataset_quality_report.json  auto_promotion_review_report.json  bench_ani2x_ethanol.json  bench_mace_small_ethanol.json  benchmark_finetuned_ani2x.json  center_balanced_cleanup_report.json  center_balanced_validation_report.json  center_cleanup_report.json  center_expanded_cleanup_report.json  center_expanded_validation_report.json  center_expansion_pipeline_report.json  center_expansion_promotion_report.json  center_head_center_balanced_comparison.json  center_head_center_expanded_strict_comparison.json  center_head_cleaned_strict_comparison.json  center_head_comparison.json  center_head_oof_cv.json  center_head_template_split_comparison.json  center_validation_cleaned_report.json  center_validation_report.json  energy_force_plot_report.json  fg_force_ani2x_ethanol.json  fg_force_mace_ethanol.json  fg_force_qo2mol_mace.json  (+42 more)
(+139 files in other folders)
