[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mendel"
version = "0.1.0"
description = "Functional-group-level reaction role prediction framework."
requires-python = ">=3.10"
dependencies = [
    "rdkit>=2023.9",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mendel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "phase7: tests for Phase 7 MLP role predictor training and inference",
    "ml: tests that require optional ML dependencies such as torch",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
